# odin-control-adapter-template

./: README.md  cookiecutter.json
.github/workflows/: generate_new_adapter_repo.yaml
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/control/: pyproject.toml
{{cookiecutter.project_slug}}/control/src/{{cookiecutter.package_name}}/: controller.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: adapter.py
{{cookiecutter.project_slug}}/web/config/: odin.cfg
